<resources>
    <string name="app_name">Opizon</string>
    <string name="close_btn">X</string>
    <string name="swipe_right_btn">&gt;</string>
    <string name="swipe_left_btn"> &lt; </string>
    <string name="happiness">Happy &#128516;</string>
    <string name="neutral">neutral &#128528;</string>
    <string name="disgust">disgusted &#129326;</string>
    <string name="sadness">sad &#9785;</string>
    <string name="surprise">surprised &#128558;</string>
    <string name="fear">feared &#128552;</string>
    <string name="anger">angry &#128552;</string>
    <string name="check">&#9989;</string>
    <string name="cross">&#10060;</string>
    <string name="wait">&#9203;</string>

    <string name="save_quote">Save</string>
    <string name="share_quote">Share</string>

    <string name="emotion_mode">attributeDetected</string>
    <string name="faceage_mode">faceage</string>
    <string name="hair_mode">hair</string>
    <string name="makeup_mode">makeup</string>
    <string name="headpose_mode">headpose</string>
    <string name="accessories_mode">accessories</string>



</resources>
