<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".App2.App2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/circle_tv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="5"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/cerclebackgroundcolored"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.6"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_above="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:stretchColumns="0,1,2,3,4"
        android:gravity="center"
        android:alpha="0.8">

        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/tasktxtview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/happiness"
                android:textSize="15sp"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:background="#FFFFFF"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tasktxtview2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/neutral"
                android:textSize="15sp"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tasktxtview3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/disgust"
                android:textSize="15sp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_column="2"
                />
            <TextView
                android:id="@+id/tasktxtview4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sadness"
                android:textSize="15sp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_column="3"
                />
            <TextView
                android:id="@+id/tasktxtview5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/surprise"
                android:textSize="15sp"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_column="4"
                />
        </TableRow>

        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/resulttxtview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wait"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/resulttxtview2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wait"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/resulttxtview3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wait"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:id="@+id/resulttxtview4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wait"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:layout_column="3" />
            <TextView
                android:id="@+id/resulttxtview5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wait"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:layout_column="4" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.75"

        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"

        android:text="PLAY"
        android:textColor="@color/white"
        android:textSize="20dp"

        app:cornerRadius="30dp"
        app:elevation="50dp"

        app:icon="@drawable/ic_play_arrow_black_24dp"
        app:iconPadding="16dp"
        app:iconSize="32dp"
        app:iconTint="@color/white" />
</RelativeLayout>

