<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:text="@string/close_btn"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/cerclebackground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/txtswipeleft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:textColor="@color/white"
                android:text="@string/swipe_left_btn"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@drawable/cerclebackground"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextSwitcher
                android:id="@+id/textswitcher1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
            </TextSwitcher>
            <TextSwitcher
                android:id="@+id/textswitcher2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
            </TextSwitcher>
        </LinearLayout>
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/txtswiperight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:textColor="@color/white"
                android:text="@string/swipe_right_btn"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@drawable/cerclebackground"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation = "vertical">

        <Button
            android:id="@+id/btnconfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Confirm"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/white" />

    </LinearLayout>



</LinearLayout>